fixed spacing, added cosmology talk

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -29,7 +29,6 @@ ol { font-family: Verdana, Arial, Helvetica, sans-serif;
 p { 
   font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: 15px;
-  margin: 0.3em 0;
 }
 
 h1 {
